--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -6,6 +6,10 @@
     box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.25);
     border-radius: 0px 40px 40px 0px;
 
+    position:fixed;
+    top: 0;
+    left: 0;
+
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
