--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -42,9 +42,10 @@
             transition-duration: 400ms;
 
             a {
-                width: 40%;
+                width: 100%;
                 height: 60px;
-                margin: 0 0 0 25px;
+                padding: 0 0 0 25px;
+                box-sizing: border-box;
     
                 display: flex;
                 justify-content: flex-start;
