--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -6,4 +6,6 @@
 @import 'layouts/footer';
 @import 'layouts/header';
 @import 'layouts/pages';
-@import 'layouts/posts';
+
+@import 'components/forms';
+@import 'components/projectblocs';
