Style projects page

--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -1,7 +1,7 @@
 body {
     width: 100%;
-    min-height: 100vh;
-    padding: 0 0 0 300px;
+    height: 100vh;
+    padding: 0px 0px 0px 300px;
     box-sizing: border-box;
 
     display: flex;
@@ -14,5 +14,43 @@ body {
     overflow: hidden;
     
     background-color: #242429;
+
+    .main {
+        width: 100%;
+        min-height: 100%;
+        padding: 50px;
+        box-sizing: border-box;
+        overflow-y: auto;
+
+        .title {
+            height: 30px;
+            margin: 5px;
+    
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-start;
+            align-items: center;
+    
+            img {
+                height: 100%;
+                width: auto;
+                margin: 0 10px 0 0 ;
+            }
+    
+            h2 {
+                color: white;
+                font-family: Uni Neue;
+                font-weight: 500;
+                font-size: 1.6em;
+            }
+        }
+    
+        p {
+            color: white;
+            font-family: Uni Neue;
+            font-weight: 500;
+            font-size: 1em;  
+        }
+    }
 }
 
