--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -5,7 +5,7 @@
 
 @import 'layouts/footer';
 @import 'layouts/header';
-@import 'layouts/pages';
+@import 'layouts/projects';
 
 @import 'components/forms';
-@import 'components/projectblocs';
+@import 'components/project';
