--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -6,6 +6,7 @@
 @import 'layouts/footer';
 @import 'layouts/header';
 @import 'layouts/projects';
+@import 'layouts/about';
 
 @import 'components/forms';
 @import 'components/project';
