--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -82,7 +82,7 @@
             height: 4px;
             margin: 0 0 0 25px;
             border-radius : 6px;
-            background-color: #9461E5;
+            background-color: $purple;
         }
         .current_page_item {
             background: #2F2F34;
