--- a/resources/assets/styles/layouts/_about.scss
+++ b/resources/assets/styles/layouts/_about.scss
@@ -1,6 +1,8 @@
 .page-about {
     width: 100%;
     height: 100%;
+    padding: 50px;
+    box-sizing: border-box;
 
     .informations{
         width: 100%;
