--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -7,6 +7,7 @@
 @import 'layouts/header';
 @import 'layouts/projects';
 @import 'layouts/about';
+@import 'layouts/contact';
 
 @import 'components/forms';
 @import 'components/project';
