--- a/resources/assets/styles/layouts/_about.scss
+++ b/resources/assets/styles/layouts/_about.scss
@@ -25,6 +25,35 @@
             right: 100px;
 
         }
+
+        ul {
+            margin: 15px 10px;
+
+            li {
+                color: white;
+                font-family: Uni Neue;
+                font-weight: 500;
+                font-size: 1em;  
+                line-height: 1.4em;
+
+                span {
+                    color: $purple;
+                }
+            }
+        }
+
+        p {
+            width: 60%;
+            margin: 10px 0;
+            text-align: justify;
+
+            &.textarea {
+                font-size: 1.1em;
+                line-height: 1.4em;
+                margin: 30px 0
+                
+            }
+        }
     }
     
 }
