--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -1,6 +1,6 @@
 body {
     width: 100%;
-    height: 100vh;
+    max-height: 100vh;
     padding: 0px 0px 0px 300px;
     box-sizing: border-box;
 
@@ -11,14 +11,12 @@ body {
     align-items: flex-start;
 
     position: relative;
-    overflow: hidden;
     
     background-color: #242429;
 
     .main {
         width: 100%;
         min-height: 100%;
-        overflow-y: auto;
  
         hr {
             border-color: #3D3D3D;
