--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -5,6 +5,7 @@
 
 @import 'layouts/footer';
 @import 'layouts/header';
+@import 'layouts/home';
 @import 'layouts/projects';
 @import 'layouts/about';
 @import 'layouts/contact';
