--- a/resources/assets/styles/layouts/_contact.scss
+++ b/resources/assets/styles/layouts/_contact.scss
@@ -1,7 +1,160 @@
 .page-contact {
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     padding: 50px;
     box-sizing: border-box;
+    overflow-y: auto;
     
+    /* FORMULAIRE */
+
+    .form {
+        width: 100%;
+        min-height: 100%;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        overflow-y: auto;
+    }
+
+    form{
+        width: 35vw;
+        min-height: 100%;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .form_row {
+        width: 100%;
+
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        align-items: center;
+    }
+
+    .form label {
+        width: 100%;
+        height: 70px;
+        padding: 15px;
+        box-sizing: border-box;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: flex-start;
+
+        font-family: 'Montserrat';
+        font-weight: 500;
+        font-size: 0.8em;
+        color: white;
+        line-height: 1.2em;
+    }
+
+    .form .textarea {
+        height: auto;
+    }
+
+    .form input {
+        width: 100%;
+        padding:  10px 15px;
+        box-sizing: border-box;
+        border-radius: 10px;
+        background-color: #42444D;
+        box-shadow: 2.94839px 2.94839px 14.742px rgba(0, 0, 0, 0.25);
+        border:none;
+        color: black;
+        font-family: 'Montserrat';
+        outline: none;
+    }
+
+    span {
+        width: 100%;
+    }
+
+    .form textarea {
+        width: 100%;
+        resize: none;
+        border-radius: 15px;
+        border:none;
+        background-color: #42444D;
+        box-shadow: 2.94839px 2.94839px 14.742px rgba(0, 0, 0, 0.25);
+        box-sizing: border-box;
+        padding:  10px 15px;
+        font-family: 'Montserrat';
+        outline: none;
+    }
+
+    .form input:focus,.form textarea:focus {
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25),inset 0px 0px 10px $purple;
+    }
+
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover, 
+    input:-webkit-autofill:focus,
+    textarea:-webkit-autofill,
+    textarea:-webkit-autofill:hover,
+    textarea:-webkit-autofill:focus {
+        box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.25),inset 0px 0px 10px $purple;
+        color: #000;
+        font-family: 'Montserrat';
+        transition-duration: 400ms ;
+    }
+    .form p {
+        width: 100%;
+        margin: 10px 0;
+
+        font-family: 'Montserrat';
+        font-size: 0.7em;
+        font-weight: 400;
+        color: white;
+        text-align: center;
+    }
+
+    .form p a {
+        color: white;
+        font-family: 'Montserrat';
+    }
+
+    .form .message {
+        height: 50px;
+        width: 100%;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        font-family: "Montserrat";
+        font-weight: 600;
+        font-size: 1em;
+        text-align: center;
+    }
+    
+    .wpcf7-response-output{
+        margin: 10px!important;
+    }
+
+    .submit {
+        width: 100%;
+        height: 70px;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        input[type="submit"] {
+            background-color: #2F2F34;
+            border: none;
+            width: 150px;
+            font-size: 0.9em;
+            font-weight: 600;
+            color: white;
+            text-decoration: none;
+            cursor: pointer;
+        }
+    }
 }
