--- a/resources/assets/styles/components/_project.scss
+++ b/resources/assets/styles/components/_project.scss
@@ -1,27 +1,40 @@
-.bloc_item {
-    width: 35%;
-    height: 250px;
-    margin: 50px;
+.all_projects {
+    width: 100%;
+    min-height: 100%;
 
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
-    
-    box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
-    background-color: #1F1F24;
-    
-        img {
-            width: 100%;
-            height: 100%;  
-            border-radius: 30px; 
-            object-fit: cover;
-            object-position: top center;
-            transition-duration: 400ms;
 
-            &:hover {
-                filter: brightness(0.5);
+    margin: 50px 0 0 0;
+
+    .bloc_item {
+        width: 425px;
+        height: 275px;
+        margin: auto;
+    
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        
+        box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.5);
+        background-color: #1F1F24;
+        border-radius: 30px; 
+        overflow: hidden;
+        
+            img {
+                width: 100%;
+                height: 100%;  
+                object-fit: cover;
+                object-position: center;
                 transition-duration: 400ms;
+    
+                &:hover {
+                    filter: brightness(0.5);
+                    transition-duration: 400ms;
+                }
             }
         }
-    }
+}
