single project page

--- a/resources/assets/styles/components/_project.scss
+++ b/resources/assets/styles/components/_project.scss
@@ -13,7 +13,7 @@
     .bloc_item {
         width: 425px;
         height: 275px;
-        margin: auto;
+        margin: 25px auto;
     
         display: flex;
         justify-content: flex-start;
