--- a/resources/assets/styles/main.scss
+++ b/resources/assets/styles/main.scss
@@ -9,6 +9,7 @@
 @import 'layouts/projects';
 @import 'layouts/about';
 @import 'layouts/contact';
+@import 'layouts/singlepost';
 
 @import 'components/forms';
 @import 'components/project';
