--- a/resources/assets/styles/common/_global.scss
+++ b/resources/assets/styles/common/_global.scss
@@ -43,14 +43,14 @@ body {
             
         h2 {
             color: white;
-            font-family: Uni Neue;
+            font-family: $regular;
             font-weight: 500;
             font-size: 1.6em;
         }
     
         p {
             color: white;
-            font-family: Uni Neue;
+            font-family: $regular;
             font-weight: 500;
             font-size: 1em;  
         }
