--- a/resources/assets/styles/layouts/_about.scss
+++ b/resources/assets/styles/layouts/_about.scss
@@ -31,7 +31,7 @@
 
             li {
                 color: white;
-                font-family: Uni Neue;
+                font-family: $regular;
                 font-weight: 500;
                 font-size: 1em;  
                 line-height: 1.4em;
