--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -51,7 +51,7 @@
                 justify-content: flex-start;
                 align-items: center;
 
-                font-family: Uni Neue;
+                font-family: $book;
                 font-weight: 400;
                 color: #808080;
                 text-decoration: none;
